--- a/app/views/managements/wait.html.erb
+++ b/app/views/managements/wait.html.erb
@@ -1,7 +1,10 @@
-<!DOCTYPE HTML>
-	<head>
-		<meta http-equiv="refresh" content="3; url=/managements">
-	</head>
-	<body>
-		<h1>登录成功,正在为您转到主界面</h1>
-	</body>
+<!DOCTYPE html>
+<html>
+  <head>
+  <title></title>
+    <meta http-equiv="refresh" content="3; url=/managements">
+  </head>
+  <body>
+    <h1>登录成功,正在为您转到主界面</h1>
+  </body>
+</html>
