--- a/app/views/users/wait.html.erb
+++ b/app/views/users/wait.html.erb
@@ -1,7 +1,9 @@
 <!DOCTYPE HTML>
-	<head>
-		<meta http-equiv="refresh" content="3; url=/users">
-	</head>
-	<body>
-		<h1>登录成功,正在为您转到主界面</h1>
-	</body>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="3; url=/users">
+  </head>
+  <body>
+    <h1>登录成功,正在为您转到主界面</h1>
+  </body>
+</html>
