--- a/app/views/logins/login.html.erb
+++ b/app/views/logins/login.html.erb
@@ -3,7 +3,7 @@
   <head>
   </head>
   <body>
-    <div id="login_head"><h1>职工信息系统</h1></div>
+    <div id="login_head"><h1>企业员工信息管理系统</h1></div>
     <div id="login">
       <%= form_for :basic, url: root_path do |f| %>
         <p>
