--- a/app/assets/stylesheets/login.scss.erb
+++ b/app/assets/stylesheets/login.scss.erb
@@ -16,8 +16,9 @@ body{
 #login_head{
   width: 100%;
   height: 20%;
-  margin: 1% auto;
+  margin: 2% auto;
   text-align: center;
+  line-height: 190px;
 }
 
 #login{
