--- a/app/assets/stylesheets/managements.scss.erb
+++ b/app/assets/stylesheets/managements.scss.erb
@@ -25,19 +25,21 @@ h1{
   float: left;
   word-wrap: break-word;
   .sider{
-    width: 98%;
-    height: 6.5%;
+    width: 95%;
+    height: 7%;
     margin: 1% 0;
-    line-height: 40px;
+    line-height: 180%;
     color: white;
     font-size: 20px;
     display: block;
     text-decoration: none;
-    text-align: center;
+    
+    cursor: pointer;
   }
 
   ul{
-    margin: 5% 10%;
+    width: 98%;
+    margin: 5% 1%;
     list-style: none;
     color: white;
     display: none;
