--- a/app/views/managements/index.html.erb
+++ b/app/views/managements/index.html.erb
@@ -11,38 +11,40 @@
       </p>
     </div>
     <div id="mge_left">
-      <a href="" class="sider">
-        <span>
+      <div id="sider1">
+        <span class="sider" >
           企业公告
         </span>
-      </a>
-      <ul>
-          <li>添加公告</li>
-          <li>删除公告</li>
-          <li>修改公告</li>
-      </ul>
-      <a href="" class="sider">
-        <span>职工档案</span>
-      </a>
-      <ul>
-          <li>添加档案</li>
-          <li>删除档案</li>
-          <li>修改档案</li>
-      </ul>
-      <a href="" class="sider">
-        <span>薪酬记录</span>
-      </a>
-      <ul>
-          <li>添加薪酬记录</li>
-          <li>删除薪酬记录</li>
-          <li>修改薪酬记录</li>
-      </ul>
-      <a href="" class="sider"><span>出勤记录</span></a>
-      <ul>
-          <li>添加出勤记录</li>
-          <li>删除出勤记录</li>
-          <li>修改出勤记录</li>
-      </ul>
+        <ul id="ul1">
+          <li><a href="javascript:">添加公告</a></li>
+          <li><a href="javascript:">删除公告</a></li>
+          <li><a href="javascript:">修改公告</a></li>
+        </ul>
+      </div>
+      <div id="sider2">
+        <span class="sider" id="sider2">职工档案</span>
+        <ul id="ul2">
+          <li><a href="javascript:">添加档案</a></li>
+          <li><a href="javascript:">删除档案</a></li>
+          <li><a href="javascript:">修改档案</a></li>
+        </ul>
+      </div>
+      <div id="sider3">
+        <span class="sider" id="sider3">薪酬记录</span>
+        <ul id="ul3">
+          <li><a href="javascript:">添加薪酬记录</a></li>
+          <li><a href="javascript:">删除薪酬记录</a></li>
+          <li><a href="javascript:">修改薪酬记录</a></li>
+        </ul>
+      </div>
+      <div id="sider4">
+        <span class="sider" id="sider4">出勤记录</span>
+        <ul id="ul4">
+          <li><a href="javascript:">添加出勤记录</a></li>
+          <li><a href="javascript:">删除出勤记录</a></li>
+          <li><a href="javascript:">修改出勤记录</a></li>
+        </ul>
+      </div>
     </div>
     <div id="mge_right">
       ffffffffffffff ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
