--- a/app/assets/stylesheets/managements.scss.erb
+++ b/app/assets/stylesheets/managements.scss.erb
@@ -11,7 +11,19 @@ h1{
   height: 10%;
   margin: 0.5% auto;
   background:{
-    color: lightgreen;
+    color: white;
+  }
+  font-size: 18px;
+  a:link{
+    text-decoration: none;
+    color: black;
+  }
+  a:hover{
+    text-decoration: underline;
+    color: black;
+  }
+  a:visited{
+    color: black;
   }
 }
 
@@ -22,6 +34,7 @@ h1{
   background:{
     color: #172244;
   }
+  color: white;
   float: left;
   word-wrap: break-word;
   .sider{
@@ -29,7 +42,6 @@ h1{
     height: 7%;
     margin: 1% 0;
     line-height: 180%;
-    color: white;
     font-size: 20px;
     display: block;
     text-decoration: none;
@@ -41,10 +53,12 @@ h1{
     width: 98%;
     margin: 5% 1%;
     list-style: none;
-    color: white;
     display: none;
   }
-
+  a{
+    color: white;
+    text-decoration: none;
+  }
   .sider:hover{
     background:{
       color:black;
