--- a/app/views/managements/index.html.erb
+++ b/app/views/managements/index.html.erb
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-  </head>
-  <body>
-    <div id="mge_head">
-      <p class ="uname"><font size="4" >当前用户:<%=  cookies[:emp_num] %></font></p>
-      <p class="time"><font size="4" >当前时间:</font></p>
+<div id="mge_head">
+      <p class ="uname">当前用户:<%=  cookies[:emp_num] %></p>
+      <p class="time">当前时间:</p>
       <p class ="mge_logout">
           <%= link_to '退出帐号', root_path%>
       </p>
@@ -16,9 +11,9 @@
           企业公告
         </span>
         <ul id="ul1">
-          <li><a href="javascript:">添加公告</a></li>
-          <li><a href="javascript:">删除公告</a></li>
-          <li><a href="javascript:">修改公告</a></li>
+          <li><a href="/managements?page=1">添加公告</a></li>
+          <li><a href="/managements?page=2">删除公告</a></li>
+          <li><a href="/managements?page=3">修改公告</a></li>
         </ul>
       </div>
       <div id="sider2">
@@ -47,11 +42,10 @@
       </div>
     </div>
     <div id="mge_right">
-      ffffffffffffff ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
+      <%= render @pg %>
     </div>
     <div id="mge_foot">
       ffffffffffffff ffffffffff ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
     </div>
-  </body>
-</html>
+
 
