--- a/app/assets/stylesheets/managements.scss.erb
+++ b/app/assets/stylesheets/managements.scss.erb
@@ -48,18 +48,11 @@ h1{
     
     cursor: pointer;
   }
-
-  ul{
-    width: 98%;
-    margin: 5% 1%;
-    list-style: none;
-    display: none;
-  }
   a{
     color: white;
     text-decoration: none;
   }
-  .sider:hover{
+  :hover{
     background:{
       color:black;
     }
@@ -91,7 +84,7 @@ h1{
 }
 
 .uname{
-  width: 18%;
+  width: 20%;
   height: 40%;
   margin: 3% 0 0 0;
   float: left;
@@ -100,13 +93,44 @@ h1{
 .mge_logout{
   width: 7%;
   height: 40%;
-  margin: 3% 0 0 0;
+  margin: 3% 0 0 6%;
+  float: left;
+}
+
+#time{
+  width: 30%;
+  height: 40%;
+  margin: 3% 0 0 0%;
   float: right;
 }
 
-.time{
-  width: 20%;
-  height: 40%;
-  margin: 3% 0 0 5%;
-  float: left;
+.ance{
+    width: 10%;
+    height: 5%;
+    margin: 1% 0.5%;
+    line-height: 180%;
+    font-size: 16px;
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    background-color: gray;
+    float: left;
+}
+tr {
+  td{
+    width: 10%;
+    height: 7%;
+    border: 1px solid black;
+    a:link{
+      text-decoration: none;
+      color: black;
+    }
+    a:hover{
+      text-decoration: underline;
+      color: black;
+    }
+    a:visited{
+      color: black;
+    }
+  }
 }
