--- a/app/views/managements/_announce.html.erb
+++ b/app/views/managements/_announce.html.erb
@@ -1,1 +1,3 @@
-<h1>this is enterprise announce page</h1>
+<a href="" ><span class="ance">添加公告</span></a>
+<a href="" ><span class="ance">删除公告</span></a>
+<a href="" ><span class="ance">修改公告</span></a>
