--- a/app/assets/stylesheets/managements.scss.erb
+++ b/app/assets/stylesheets/managements.scss.erb
@@ -116,21 +116,41 @@ h1{
     background-color: gray;
     float: left;
 }
-tr {
-  td{
-    width: 10%;
-    height: 7%;
-    border: 1px solid black;
-    a:link{
-      text-decoration: none;
-      color: black;
+table{
+  width:99%;
+  tr {
+    td, th{
+      width: 10%;
+      height: 7%;
+      border: 1px solid black;
+      a:link{
+        text-decoration: none;
+        color: black;
+      }
+      a:hover{
+        text-decoration: underline;
+        color: black;
+      }
+      a:visited{
+        color: black;
+      }
     }
-    a:hover{
-      text-decoration: underline;
-      color: black;
-    }
-    a:visited{
-      color: black;
-    }
+  }
+}
+#tips{
+  width: 99%;
+  height:7%;
+  text-align: center;
+}
+
+.form{
+  width: 26%;
+  height: 60%;
+  margin: 10% auto;
+  div{
+    margin: 5% auto;
+    width: 90%;
+    height: 60%;
+    text-align: left;
   }
 }
