--- a/app/assets/stylesheets/managements.scss.erb
+++ b/app/assets/stylesheets/managements.scss.erb
@@ -116,7 +116,7 @@ h1{
     background-color: gray;
     float: left;
 }
-table{
+.tb{
   width:99%;
   tr {
     td, th{
@@ -134,6 +134,18 @@ table{
       a:visited{
         color: black;
       }
+    }
+  }
+}
+.showtb{
+  width:70%;
+  height: 20%;
+  margin: 10% auto;
+  tr {
+    td, th{
+      width: 10%;
+      height: 2%;
+      border: 1px solid black;
     }
   }
 }
