--- a/app/views/managements/_doc.html.erb
+++ b/app/views/managements/_doc.html.erb
@@ -1,6 +1,6 @@
 <%= link_to content_tag(:span, "添加员工档案"),"/managements/adddoc",{:class=>'ance'} %>
 <br >
-<table>
+<table class="tb">
   <tr>
     <th>员工号码</th>
     <th>姓名</th>
@@ -8,7 +8,7 @@
     <th>操作</th>
   </tr>
   <% @emp.each do |employee| %>
-    <div style="display:none"><%= cookies[:empid]=employee.id %></div>
+    <div style="display:none"><%= @empid=employee.id %></div>
     <tr>
       <td><%= employee.emp_number %></td>
       <td><%= employee.emo_name %></td>
@@ -20,9 +20,9 @@
         <% end %>
       </td>
       <td>
-        <%= link_to "详情", {:controller=>'managements', :action=>'index'}%>
-         <%= link_to "删除", {:controller=>'managements', :action=>'destroy'}, data: { confirm: 'Are you sure?' }%>
-        <%= link_to "修改", {:controller=>'managements', :action=>'index'}%>
+        <%= link_to "详情", {:controller=>'managements', :action=>'showdoc', :eid=>@empid}%>
+         <%= link_to "删除", {:controller=>'managements', :action=>'deletedoc', :eid=>@empid}, data: { confirm: '确定删除吗?' }%>
+        <%= link_to "修改", {:controller=>'managements', :action=>'editdoc', :eid=>@empid}%>
       </td>
     </tr>
   <% end %>
