--- a/app/views/managements/adddoc.html.erb
+++ b/app/views/managements/adddoc.html.erb
@@ -31,14 +31,11 @@
       </p>
 
       <p>
-       <%= cookies[:hint] %>
-      </p>
-      <p>
         初始密码:&nbsp&nbsp&nbsp&nbsp&nbsp<%= f.text_field :password, :value=>"123456" %>
      </p>
 
      <p id="login_btn">
-       <%= f.submit "提交" %>
+       <%= f.submit "提交", data: { confirm: '确定提交吗?' } %>
       </p>
     <% end %>
   </div>
