--- a/app/assets/stylesheets/managements.scss.erb
+++ b/app/assets/stylesheets/managements.scss.erb
@@ -127,11 +127,11 @@ h1{
         text-decoration: none;
         color: black;
       }
-      a:hover{
-        text-decoration: underline;
+      a:visited{
         color: black;
       }
-      a:visited{
+      a:hover{
+        text-decoration: underline;
         color: black;
       }
     }
@@ -156,7 +156,7 @@ h1{
 }
 
 .form{
-  width: 26%;
+  width: 30%;
   height: 60%;
   margin: 10% auto;
   div{
@@ -165,4 +165,12 @@ h1{
     height: 60%;
     text-align: left;
   }
+}
+
+.showpost{
+  width:70%;
+  height: 85%;
+  margin: 5% auto;
+  text-align: center;
+  word-wrap: break-word;
 }
