--- a/app/assets/stylesheets/managements.scss.erb
+++ b/app/assets/stylesheets/managements.scss.erb
@@ -8,11 +8,12 @@ h1{
 #mge_head{
   float: left;
   width: 98%;
-  height: 10%;
+  height: 6%;
   margin: 0.5% auto;
   background:{
     color: white;
   }
+  border: 1px solid purple;
   font-size: 18px;
   a:link{
     text-decoration: none;
@@ -65,8 +66,9 @@ h1{
   height: 75%;
   margin: 0.5% 1%;
   background:{
-    color: lightgreen;
+    color: white;
   }
+  border: 1px solid black;
   float: left;
   word-wrap: break-word;
 }
@@ -78,29 +80,26 @@ h1{
   height: 5%;
   margin: 0.5% auto;
   text-align: center;
-  background:{
-    color: lightgreen;
-  }
 }
 
 .uname{
   width: 20%;
   height: 40%;
-  margin: 3% 0 0 0;
+  margin: 1% 0 0 0;
   float: left;
 }
 
 .mge_logout{
-  width: 7%;
+  width: 6%;
   height: 40%;
-  margin: 3% 0 0 6%;
+  margin: 1% 0 0 6%;
   float: left;
 }
 
 #time{
   width: 30%;
   height: 40%;
-  margin: 3% 0 0 0%;
+  margin: 1% 0 0 0%;
   float: right;
 }
 
@@ -117,6 +116,7 @@ h1{
     float: left;
 }
 .tb{
+  margin: 1% 0;
   width:99%;
   tr {
     td, th{
@@ -141,6 +141,7 @@ h1{
   width:70%;
   height: 20%;
   margin: 10% auto;
+  text-align: center;
   tr {
     td, th{
       width: 10%;
