--- a/app/views/managements/createdoc.html.erb
+++ b/app/views/managements/createdoc.html.erb
@@ -1,4 +1,4 @@
-<meta http-equiv="refresh" content="1; url=/managements?page=1">
+<meta http-equiv="refresh" content="1; url=/managements?pg=1">
 <% if @alert == 1 %>
   <script type="text/javascript">
      alert("创建成功!")
