--- a/app/views/managements/deleteatt.html.erb
+++ b/app/views/managements/deleteatt.html.erb
@@ -1,4 +1,4 @@
-<meta http-equiv="refresh" content="1; url=/managements?page=3">
+<meta http-equiv="refresh" content="1; url=/managements?pg=3">
 <% if @alert == 1 %>
   <script type="text/javascript">
      alert("删除成功!")
