--- a/app/views/managements/updatelag.html.erb
+++ b/app/views/managements/updatelag.html.erb
@@ -1,4 +1,4 @@
-<meta http-equiv="refresh" content="1; url=/managements?page=2">
+<meta http-equiv="refresh" content="1; url=/managements?pg=2">
 <% if @alert == 1 %>
   <script type="text/javascript">
      alert("更新成功!")
