--- a/app/views/users/showatt.html.erb
+++ b/app/views/users/showatt.html.erb
@@ -52,4 +52,4 @@
     <td><%= @att.lateleave_date %></td>
   </tr>
 </table>
-<p><%= link_to "返回首页", managements_path+"?pg=3" %></p>
+<p><%= link_to "返回首页", users_path+"?pg=3" %></p>
