--- a/app/views/users/showlag.html.erb
+++ b/app/views/users/showlag.html.erb
@@ -24,4 +24,4 @@
   <td><%= @lag.pay_paymoney %>元</td>
   </tr>
 </table>
-<p><%= link_to "返回首页", managements_path+"?pg=2" %></p>
+<p><%= link_to "返回首页", users_path+"?pg=2" %></p>
