--- a/app/assets/stylesheets/users.scss.erb
+++ b/app/assets/stylesheets/users.scss.erb
@@ -1,3 +1,25 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.usertb{
+  width:90%;
+  height: 20%;
+  margin: 2% auto;
+  text-align: center;
+  tr {
+    td, th{
+      width: 10%;
+      height: 2%;
+      border: 1px solid black;
+    }
+  }
+}
+
+#per{
+  margin: 1.5% auto;
+  text-align: center;
+}
+#tips5{
+  color: red;
+  text-align:center;
+}
