--- a/app/views/managements/editatt.html.erb
+++ b/app/views/managements/editatt.html.erb
@@ -1,1 +1,61 @@
-<h1>this is edit att page!</h1>
+<div class="form">
+  <div>
+    <%= form_for :att, url: '/managements/updateatt' do |f| %>
+      <p style="display:none">
+        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+        <%= f.text_field :id, :value=>@att.id %>
+      </p>
+      <p>
+        假单编号: &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<%= f.text_field :number, :value=>@att.number %>
+      </p>
+
+      <p>
+        员工编号: &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<%= f.text_field :emp_number, :value=>@att.emp_number %>
+      </p>
+
+      <p>
+        请假类型: &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<%= f.select(:emp_holiday, [['', 0], ['事假', 1], ['病假', 2]])  %>
+        <% if @att.emp_holiday == 0 %>
+          <%= f.select(:emp_holiday, [['', 0], ['事假', 1], ['病假', 2]], :selected=>0)  %>
+        <% elsif @att.emp_holiday == 1 %>
+          <%= f.select(:emp_holiday, [['', 0], ['事假', 1], ['病假', 2]], :selected=>1)  %>
+        <% elsif @att.emp_holiday == 2 %>
+          <%= f.select(:emp_holiday, [['', 0], ['事假', 1], ['病假', 2]], :selected=>2)  %>
+        <% end %>
+      </p>
+
+      <p>
+        请假日期: &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<%= f.date_field :emp_private_date, :value=>@att.emp_private_date %>
+      </p>
+
+      <p>
+        请假扣除金额: &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<%= f.text_field :emp_private_money, :value=>@att.emp_private_money %>
+      </p>
+
+      <p>
+        迟到早退: &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<%= f.select(:lateleave, [['', 0], ['迟到', 1], ['早退', 2]])  %>
+        <% if @att.lateleave == 0 %>
+          <%= f.select(:lateleave, [['', 0], ['迟到', 1], ['早退', 2]], :selected=>0)  %>
+        <% elsif @att.lateleave == 1 %>
+          <%= f.select(:lateleave, [['', 0], ['迟到', 1], ['早退', 2]], :selected=>1)  %>
+        <% elsif @att.lateleave == 2 %>
+          <%= f.select(:lateleave, [['', 0], ['迟到', 1], ['早退', 2]], :selected=>2)  %>
+        <% end %>
+      </p>
+
+      <p>
+        迟到早退扣除金额: <%= f.text_field :emp_lateleave_money, :value=>@att.emp_lateleave_money %>
+      </p>
+
+      <p>
+        迟到早退日期: &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<%= f.date_field :lateleave_date, :value=>@att.lateleave_date %>
+      </p>
+
+     <p id="login_btn">
+       <%= f.submit "提交", data: { confirm: '确定提交修改吗?' } %>
+      </p>
+    <% end %>
+  </div>
+ </div>
+ <p><%= link_to "返回首页", managements_path+"?pg=3" %></p>
+ 
