--- a/app/views/users/_announce.html.erb
+++ b/app/views/users/_announce.html.erb
@@ -1,1 +1,16 @@
-<h1>this is enterprise announce page</h1>
+<h3 id="per">企业公告信息</h3>
+<table class="tb">
+  <tr>
+    <th>公告标题</th>
+    <th>发布人</th>
+    <th>发布时间</th>
+  </tr>
+  <% @ance.each do |announce| %>
+    <div style="display:none"><%= @postid=announce.id %></div>
+    <tr>
+      <td><%= link_to announce.tittle, {:controller=>'users',:action=>'showance', :anid=>@postid}%></td>
+      <td><%= announce.author %></td>
+      <td><%= announce.created_at.to_time.strftime('%Y-%m-%d %H:%M:%S') %></td>
+  <% end %>
+</table>
+<div id="tips"><h3><%= @tips3 %><br /><%= paginate @ance %></h3></div>
