--- a/app/views/users/_attendance.html.erb
+++ b/app/views/users/_attendance.html.erb
@@ -1,1 +1,39 @@
-<h1>this is attendance page!</h1>
+<h3 id="per">员工出勤信息</h3>
+<table class="tb">
+  <tr>
+    <th>假单编号</th>
+    <th>员工编号</th>
+    <th>请假类型</th>
+    <th>迟到早退</th>
+    <th>操作</th>
+  </tr>
+  <% @att.each do |work| %>
+    <div style="display:none"><%= @attid=work.id %></div>
+    <tr>
+      <td><%= work.number %></td>
+      <td><%= work.emp_number %></td>
+      <td>
+        <% if work.emp_holiday == 0 %>
+          无
+        <% elsif work.emp_holiday == 1 %>
+          事假
+        <% elsif work.emp_holiday == 2 %>
+          病假
+        <% end %>
+      </td>
+      <td>
+        <% if work.lateleave == 0 %>
+          无
+        <% elsif work.lateleave == 1 %>
+          迟到
+        <% elsif work.lateleave == 2 %>
+          早退
+        <% end %>
+      </td>
+      <td>
+        <%= link_to "详情", {:controller=>'users',:action=>'showatt', :attid=>@attid}%>
+      </td>
+    </tr>
+  <% end %>
+</table>
+<div id="tips"><h3><%= @tips4 %><br /><%= paginate @att %></h3></div>
