--- a/app/assets/stylesheets/login.scss.erb
+++ b/app/assets/stylesheets/login.scss.erb
@@ -4,9 +4,8 @@
 html{
   width: 100%;
   height: 100%;
-  background:{
-  color: lightblue;
-  }
+  background: url("/assets/background.jpg") no-repeat;
+  background-size: cover;
 }
 
 body{
