--- a/app/assets/stylesheets/managements.scss.erb
+++ b/app/assets/stylesheets/managements.scss.erb
@@ -33,31 +33,30 @@ h1{
   height: 75%;
   margin: 0.5% 0;
   background:{
-    color: #172244;
+    color: white;
   }
-  color: white;
   float: left;
   word-wrap: break-word;
   .sider{
     width: 95%;
     height: 7%;
-    margin: 1% 0;
+    margin: 1% 1%;
     line-height: 180%;
     font-size: 20px;
     display: block;
     text-decoration: none;
-    
+    text-align:center;
     cursor: pointer;
   }
   a{
-    color: white;
+    color: black;
     text-decoration: none;
+    border: 1px solid black;
   }
   :hover{
     background:{
-      color:black;
+      color:gray;
     }
-    border: 2px solid black;
   }
 }
 
@@ -80,6 +79,8 @@ h1{
   height: 5%;
   margin: 0.5% auto;
   text-align: center;
+  background-color: white;
+  border: 1px solid black;
 }
 
 .uname{
@@ -142,6 +143,7 @@ h1{
   height: 20%;
   margin: 10% auto;
   text-align: center;
+  background-color: white;
   tr {
     td, th{
       width: 10%;
@@ -174,4 +176,5 @@ h1{
   margin: 5% auto;
   text-align: center;
   word-wrap: break-word;
+  background-color: white;
 }
